tests/ui/const-generics/gca/coherence-fail.stderr
error[E0119]: conflicting implementations of trait `Trait1` for type `[(); 2]`
  --> $DIR/coherence-fail.rs:9:1
   |
LL | impl Trait1 for [(); FOO::<1>] {}
   | ------------------------------ first implementation here
LL | impl Trait1 for [(); BAR::<1>] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[(); 2]`

error[E0119]: conflicting implementations of trait `Trait2` for type `[(); 1]`
  --> $DIR/coherence-fail.rs:16:1
   |
LL | impl Trait2 for [(); DIV2::<2>] {}
   | ------------------------------- first implementation here
LL | impl Trait2 for [(); DIV2::<3>] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[(); 1]`

error[E0119]: conflicting implementations of trait `Trait3` for type `[(); 2]`
  --> $DIR/coherence-fail.rs:25:1
   |
LL | impl Trait3 for [(); ADD1::<1>] {}
   | ------------------------------- first implementation here
LL | impl Trait3 for [(); SUB1::<3>] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[(); 2]`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
